Fix white space normalization

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -197,4 +197,5 @@ article {
 
 pre > code{
   font-family: monospace !important;
+  display: block;
 }
